--- a/1SKConnect/Source/Screen/Measure/SmartWatch/SmartWatchS5/S5TemperatureDetail/TableViewCell/CollectionViewCell/S5TemperatureChartCollectionViewCell.xib
+++ b/1SKConnect/Source/Screen/Measure/SmartWatch/SmartWatchS5/S5TemperatureDetail/TableViewCell/CollectionViewCell/S5TemperatureChartCollectionViewCell.xib
@@ -1,9 +1,9 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="19529" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.XIB" version="3.0" toolsVersion="21507" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES">
     <device id="retina6_1" orientation="portrait" appearance="light"/>
     <dependencies>
         <deployment identifier="iOS"/>
-        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="19519"/>
+        <plugIn identifier="com.apple.InterfaceBuilder.IBCocoaTouchPlugin" version="21505"/>
         <capability name="Named colors" minToolsVersion="9.0"/>
         <capability name="Safe area layout guides" minToolsVersion="9.0"/>
         <capability name="System colors in document resources" minToolsVersion="11.0"/>
@@ -17,7 +17,7 @@
     <objects>
         <placeholder placeholderIdentifier="IBFilesOwner" id="-1" userLabel="File's Owner"/>
         <placeholder placeholderIdentifier="IBFirstResponder" id="-2" customClass="UIResponder"/>
-        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="S5TemperatureChartCollectionViewCell" customModule="_SKConnect" customModuleProvider="target">
+        <collectionViewCell opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center" id="gTV-IL-0wX" customClass="S5TemperatureChartCollectionViewCell" customModule="Healtio" customModuleProvider="target">
             <rect key="frame" x="0.0" y="0.0" width="426" height="350"/>
             <autoresizingMask key="autoresizingMask"/>
             <view key="contentView" opaque="NO" clipsSubviews="YES" multipleTouchEnabled="YES" contentMode="center">
@@ -44,24 +44,24 @@
                                 </userDefinedRuntimeAttributes>
                             </label>
                             <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="WDD-jB-jEq">
-                                <rect key="frame" x="0.0" y="30.5" width="426" height="204.5"/>
+                                <rect key="frame" x="0.0" y="30.5" width="426" height="164.5"/>
                                 <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                             </view>
                             <stackView opaque="NO" contentMode="scaleToFill" distribution="fillEqually" spacing="8" translatesAutoresizingMaskIntoConstraints="NO" id="R3q-89-ejo">
-                                <rect key="frame" x="8" y="255" width="410" height="80"/>
+                                <rect key="frame" x="8" y="215" width="410" height="120"/>
                                 <subviews>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jLD-Fd-20o">
-                                        <rect key="frame" x="0.0" y="0.0" width="201" height="80"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="jLD-Fd-20o" customClass="RoundShadowView" customModule="Healtio" customModuleProvider="target">
+                                        <rect key="frame" x="0.0" y="0.0" width="201" height="120"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_thermometer" translatesAutoresizingMaskIntoConstraints="NO" id="Mev-Q3-COG">
-                                                <rect key="frame" x="85.5" y="0.0" width="30" height="30"/>
+                                                <rect key="frame" x="85.5" y="12" width="30" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="width" constant="30" id="apA-uU-UNS"/>
                                                     <constraint firstAttribute="height" constant="30" id="mEU-fJ-9WC"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nhịp tim nghỉ:" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="oUY-Yp-db8">
-                                                <rect key="frame" x="0.0" y="35" width="201" height="16.5"/>
+                                                <rect key="frame" x="0.0" y="47" width="201" height="61"/>
                                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                 <color key="textColor" name="subTitle"/>
                                                 <nil key="highlightedColor"/>
@@ -72,22 +72,28 @@
                                             <constraint firstItem="Mev-Q3-COG" firstAttribute="centerX" secondItem="jLD-Fd-20o" secondAttribute="centerX" id="KRT-xx-1OZ"/>
                                             <constraint firstItem="oUY-Yp-db8" firstAttribute="leading" secondItem="jLD-Fd-20o" secondAttribute="leading" id="Oyd-IJ-aPx"/>
                                             <constraint firstAttribute="trailing" secondItem="oUY-Yp-db8" secondAttribute="trailing" id="UMd-Ng-BjE"/>
-                                            <constraint firstItem="Mev-Q3-COG" firstAttribute="top" secondItem="jLD-Fd-20o" secondAttribute="top" id="YBm-It-MpV"/>
+                                            <constraint firstItem="Mev-Q3-COG" firstAttribute="top" secondItem="jLD-Fd-20o" secondAttribute="top" constant="12" id="YBm-It-MpV"/>
+                                            <constraint firstAttribute="bottom" secondItem="oUY-Yp-db8" secondAttribute="bottom" constant="12" id="ijY-pb-fSY"/>
                                             <constraint firstItem="oUY-Yp-db8" firstAttribute="top" secondItem="Mev-Q3-COG" secondAttribute="bottom" constant="5" id="oUh-xN-Vq4"/>
                                         </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="12"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </view>
-                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zy9-Xe-Hfx">
-                                        <rect key="frame" x="209" y="0.0" width="201" height="80"/>
+                                    <view contentMode="scaleToFill" translatesAutoresizingMaskIntoConstraints="NO" id="Zy9-Xe-Hfx" customClass="RoundShadowView" customModule="Healtio" customModuleProvider="target">
+                                        <rect key="frame" x="209" y="0.0" width="201" height="120"/>
                                         <subviews>
                                             <imageView clipsSubviews="YES" userInteractionEnabled="NO" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_thermometer" translatesAutoresizingMaskIntoConstraints="NO" id="ivR-Rc-Lhg">
-                                                <rect key="frame" x="85.5" y="0.0" width="30" height="30"/>
+                                                <rect key="frame" x="85.5" y="12" width="30" height="30"/>
                                                 <constraints>
                                                     <constraint firstAttribute="height" constant="30" id="aao-pg-HT3"/>
                                                     <constraint firstAttribute="width" constant="30" id="icd-mr-qrN"/>
                                                 </constraints>
                                             </imageView>
                                             <label opaque="NO" userInteractionEnabled="NO" contentMode="left" horizontalHuggingPriority="251" verticalHuggingPriority="251" text="Nhịp tim nghỉ:" textAlignment="center" lineBreakMode="wordWrap" numberOfLines="0" baselineAdjustment="alignBaselines" adjustsFontSizeToFit="NO" translatesAutoresizingMaskIntoConstraints="NO" id="e1C-2H-lvF">
-                                                <rect key="frame" x="0.0" y="35" width="201" height="16.5"/>
+                                                <rect key="frame" x="0.0" y="47" width="201" height="61"/>
                                                 <fontDescription key="fontDescription" name="Roboto-Regular" family="Roboto" pointSize="14"/>
                                                 <color key="textColor" name="subTitle"/>
                                                 <nil key="highlightedColor"/>
@@ -96,15 +102,21 @@
                                         <color key="backgroundColor" systemColor="systemBackgroundColor"/>
                                         <constraints>
                                             <constraint firstItem="e1C-2H-lvF" firstAttribute="top" secondItem="ivR-Rc-Lhg" secondAttribute="bottom" constant="5" id="Bdw-Ye-W42"/>
+                                            <constraint firstAttribute="bottom" secondItem="e1C-2H-lvF" secondAttribute="bottom" constant="12" id="F2I-1K-7zK"/>
                                             <constraint firstItem="e1C-2H-lvF" firstAttribute="leading" secondItem="Zy9-Xe-Hfx" secondAttribute="leading" id="QhC-sc-jLG"/>
                                             <constraint firstAttribute="trailing" secondItem="e1C-2H-lvF" secondAttribute="trailing" id="XRK-5I-dfs"/>
                                             <constraint firstItem="ivR-Rc-Lhg" firstAttribute="centerX" secondItem="Zy9-Xe-Hfx" secondAttribute="centerX" id="Zvx-YO-GRc"/>
-                                            <constraint firstItem="ivR-Rc-Lhg" firstAttribute="top" secondItem="Zy9-Xe-Hfx" secondAttribute="top" id="lpU-J6-6JX"/>
+                                            <constraint firstItem="ivR-Rc-Lhg" firstAttribute="top" secondItem="Zy9-Xe-Hfx" secondAttribute="top" constant="12" id="lpU-J6-6JX"/>
                                         </constraints>
+                                        <userDefinedRuntimeAttributes>
+                                            <userDefinedRuntimeAttribute type="number" keyPath="cornerRadius">
+                                                <real key="value" value="12"/>
+                                            </userDefinedRuntimeAttribute>
+                                        </userDefinedRuntimeAttributes>
                                     </view>
                                 </subviews>
                                 <constraints>
-                                    <constraint firstAttribute="height" constant="80" id="Vm2-hI-aXm"/>
+                                    <constraint firstAttribute="height" constant="120" id="Vm2-hI-aXm"/>
                                 </constraints>
                             </stackView>
                             <imageView clipsSubviews="YES" contentMode="scaleAspectFit" horizontalHuggingPriority="251" verticalHuggingPriority="251" image="ic_next_gray" translatesAutoresizingMaskIntoConstraints="NO" id="Rc2-zZ-uG0" userLabel="ic_next_gray">
